// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<bolt-ul> Component basic usage with attributes 1`] = `
<bolt-ul data-attr="some attribute"
         onclick="location.href=&#039;https://pega.com&#039;"
>
  <ul data-attr="some attribute"
      onclick="location.href=&#039;https://pega.com&#039;"
      class="c-bolt-ul"
  >
    <ssr-keep for="bolt-ul">
      <bolt-li>
        <li class="c-bolt-li c-bolt-li--ul-item ">
          <ssr-keep for="bolt-li">
            Do not include any data or information in your posts that are confidential!
          </ssr-keep>
        </li>
      </bolt-li>
      <bolt-li>
        <li class="c-bolt-li c-bolt-li--ul-item ">
          <ssr-keep for="bolt-li">
            Apply basic practices for collaborative work.
          </ssr-keep>
        </li>
      </bolt-li>
      <bolt-li>
        <li class="c-bolt-li c-bolt-li--ul-item ">
          <ssr-keep for="bolt-li">
            Be honest, respectful, trustworthy and helpful.
          </ssr-keep>
        </li>
      </bolt-li>
      <bolt-li>
        <li class="c-bolt-li c-bolt-li--ul-item c-bolt-li--last-item">
          <ssr-keep for="bolt-li">
            Answer questions authoritatively and concisely. Avoid cluttering discussions with noise.
          </ssr-keep>
        </li>
      </bolt-li>
    </ssr-keep>
  </ul>
</bolt-ul>
`;

exports[`<bolt-ul> Component with nested <bolt-ol> list compiles 1`] = `
<bolt-ul>
  <ul class="c-bolt-ul">
    <ssr-keep for="bolt-ul">
      <bolt-li>
        <li class="c-bolt-li c-bolt-li--ul-item ">
          <ssr-keep for="bolt-li">
            Do not include any data or information in your posts that are confidential!
          </ssr-keep>
        </li>
      </bolt-li>
      <bolt-li>
        <li class="c-bolt-li c-bolt-li--ul-item ">
          <ssr-keep for="bolt-li">
            Apply basic practices for collaborative work.
          </ssr-keep>
        </li>
      </bolt-li>
      <bolt-li>
        <li class="c-bolt-li c-bolt-li--ul-item ">
          <ssr-keep for="bolt-li">
            Be honest, respectful, trustworthy and helpful.
          </ssr-keep>
        </li>
      </bolt-li>
      <bolt-li>
        <li class="c-bolt-li c-bolt-li--ul-item ">
          <ssr-keep for="bolt-li">
            Answer questions authoritatively and concisely. Avoid cluttering discussions with noise.
          </ssr-keep>
        </li>
      </bolt-li>
      <bolt-li>
        <li class="c-bolt-li c-bolt-li--ul-item ">
          <ssr-keep for="bolt-li">
            Answer questions authoritatively and concisely.
            <bolt-ol>
              <ol class="c-bolt-ol">
                <ssr-keep for="bolt-ol">
                  <bolt-li>
                    <li class="c-bolt-li c-bolt-li--ol-item ">
                      <ssr-keep for="bolt-li">
                        Item 1
                      </ssr-keep>
                    </li>
                  </bolt-li>
                  <bolt-li>
                    <li class="c-bolt-li c-bolt-li--ol-item ">
                      <ssr-keep for="bolt-li">
                        Item 2
                      </ssr-keep>
                    </li>
                  </bolt-li>
                  <bolt-li>
                    <li class="c-bolt-li c-bolt-li--ol-item ">
                      <ssr-keep for="bolt-li">
                        Item 3
                      </ssr-keep>
                    </li>
                  </bolt-li>
                  <bolt-li>
                    <li class="c-bolt-li c-bolt-li--ol-item c-bolt-li--last-item">
                      <ssr-keep for="bolt-li">
                        Item 4
                      </ssr-keep>
                    </li>
                  </bolt-li>
                </ssr-keep>
              </ol>
            </bolt-ol>
          </ssr-keep>
        </li>
      </bolt-li>
    </ssr-keep>
  </ul>
</bolt-ul>
`;

exports[`<bolt-ul> Component with nested <bolt-ul> list compiles 1`] = `
<bolt-ul>
  <ul class="c-bolt-ul">
    <ssr-keep for="bolt-ul">
      <bolt-li>
        <li class="c-bolt-li c-bolt-li--ul-item ">
          <ssr-keep for="bolt-li">
            Do not include any data or information in your posts that are confidential!
          </ssr-keep>
        </li>
      </bolt-li>
      <bolt-li>
        <li class="c-bolt-li c-bolt-li--ul-item ">
          <ssr-keep for="bolt-li">
            Apply basic practices for collaborative work.
          </ssr-keep>
        </li>
      </bolt-li>
      <bolt-li>
        <li class="c-bolt-li c-bolt-li--ul-item ">
          <ssr-keep for="bolt-li">
            Be honest, respectful, trustworthy and helpful.
          </ssr-keep>
        </li>
      </bolt-li>
      <bolt-li>
        <li class="c-bolt-li c-bolt-li--ul-item ">
          <ssr-keep for="bolt-li">
            Answer questions authoritatively and concisely. Avoid cluttering discussions with noise.
          </ssr-keep>
        </li>
      </bolt-li>
      <bolt-li>
        <li class="c-bolt-li c-bolt-li--ul-item ">
          <ssr-keep for="bolt-li">
            Answer questions authoritatively and concisely.
            <bolt-ul>
              <ul class="c-bolt-ul">
                <ssr-keep for="bolt-ul">
                  <bolt-li>
                    <li class="c-bolt-li c-bolt-li--ul-item ">
                      <ssr-keep for="bolt-li">
                        Item 1
                      </ssr-keep>
                    </li>
                  </bolt-li>
                  <bolt-li>
                    <li class="c-bolt-li c-bolt-li--ul-item ">
                      <ssr-keep for="bolt-li">
                        Item 2
                      </ssr-keep>
                    </li>
                  </bolt-li>
                  <bolt-li>
                    <li class="c-bolt-li c-bolt-li--ul-item ">
                      <ssr-keep for="bolt-li">
                        Item 3
                      </ssr-keep>
                    </li>
                  </bolt-li>
                  <bolt-li>
                    <li class="c-bolt-li c-bolt-li--ul-item c-bolt-li--last-item">
                      <ssr-keep for="bolt-li">
                        Item 4
                      </ssr-keep>
                    </li>
                  </bolt-li>
                </ssr-keep>
              </ul>
            </bolt-ul>
          </ssr-keep>
        </li>
      </bolt-li>
    </ssr-keep>
  </ul>
</bolt-ul>
`;
